--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -16,10 +16,10 @@
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="200dp" />-->
 
-    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayer
+    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
         android:id="@+id/jc_player"
         android:layout_width="match_parent"
-        android:layout_height="200dp"></fm.jiecao.jcvideoplayer_lib.JCVideoPlayer>
+        android:layout_height="200dp"></fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard>
 
     <!--<com.facebook.drawee.view.SimpleDraweeView-->
         <!--android:id="@+id/switch_simple"-->
