--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="creation_bg">#E1F587</color>
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -327,7 +328,7 @@
 
     <color name="new_green">#00FF99
     </color>
-        <!-- 灰色 -->
+    <!-- 灰色 -->
     <color name="grey_color1">#333333</color>
     <color name="grey_color2">#666666</color>
     <color name="grey_color3">#999999</color>
