--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,10 +65,11 @@
 
     <LinearLayout
         android:id="@+id/sideMenu"
-        android:layout_width="400dp"
+        android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:background="@color/white"
+        android:clickable="true"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -107,8 +108,7 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp" />
+                    android:layout_centerVertical="true" />
             </RelativeLayout>
 
             <TextView
