--- a/app/src/main/res/layout/attention_layout.xml
+++ b/app/src/main/res/layout/attention_layout.xml
@@ -4,14 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/raw_1500002643" />
+        android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/attention_lv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/raw_1500002643" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/attention_lv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
