--- a/app/src/main/res/layout/text_title_layout.xml
+++ b/app/src/main/res/layout/text_title_layout.xml
@@ -5,14 +5,29 @@
     android:background="@color/colorPrimary"
     android:padding="10dp">
 
-    <TextView
+    <LinearLayout
         android:id="@+id/text_left"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:text="取消"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/left_img"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/raw_1500023215" />
+
+        <TextView
+            android:id="@+id/left_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="返回"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text_title"
