--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/turquoise"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/videos_tab"
+        style="MyTabLayoutTextAppearance"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:tabIndicatorColor="@color/colorPrimary"
+        app:tabIndicatorHeight="3dp"
+        app:tabSelectedTextColor="@color/colorPrimary"></android.support.design.widget.TabLayout>
+
+    <com.bwie.quarterhour.custom.NoScrollViewPage
+        android:id="@+id/videos_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.bwie.quarterhour.custom.NoScrollViewPage>
 </LinearLayout>
