--- a/app/src/main/res/layout/share_popu.xml
+++ b/app/src/main/res/layout/share_popu.xml
@@ -1,57 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.bwie.quarterhour.activity.SuccessActivity">
-
-    <LinearLayout
-        android:id="@+id/success_back"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/raw_1500023215" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="返回"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:layout_weight="0.6"
-        android:scaleType="centerInside"
-        android:src="@drawable/raw_1500021052" />
-
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
-        android:text="段子发布成功，快去要求小伙伴们围观吧！"
-        android:textSize="16sp" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="#D9D9D9"
         android:orientation="horizontal"
         android:padding="20dp">
 
@@ -59,8 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="5dp">
 
             <ImageView
@@ -84,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="5dp">
 
             <ImageView
@@ -109,8 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="5dp">
 
             <ImageView
@@ -157,22 +114,14 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/share_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:padding="10dp">
-
-        <Button
-            android:id="@+id/goTo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/bt_bg"
-            android:padding="10dp"
-            android:text="前去看看！！"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-    </LinearLayout>
+        android:background="#ffffff"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="取消"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 </LinearLayout>
